{
  "version": 4,
  "terraform_version": "0.12.29",
  "serial": 73,
  "lineage": "c02dd7ab-9cad-54df-7b37-a88c99453de4",
  "resources": [
    {
      "module": "module.relay-tg",
      "mode": "managed",
      "type": "aws_alb_target_group_attachment",
      "name": "lb_target_group",
      "provider": "provider.aws"
    },
    {
      "mode": "managed",
      "type": "aws_default_security_group",
      "name": "terraform-default",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:645409657343:security-group/sg-06cb513a521e29d56",
            "description": "default VPC security group",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-06cb513a521e29d56",
            "ingress": [],
            "name": "default",
            "owner_id": "645409657343",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "demo-relay-default-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0d0d31147fb504d9c"
          },
          "dependencies": [
            "aws_vpc.infra-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_default_security_group",
      "name": "terraform-default2",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:645409657343:security-group/sg-0e7257d0b5879cac0",
            "description": "default VPC security group",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0e7257d0b5879cac0",
            "ingress": [],
            "name": "default",
            "owner_id": "645409657343",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "demo-relay-default-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-00641b2043a0ed6ac"
          },
          "dependencies": [
            "aws_vpc.infra2-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat_1",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "domain": "vpc",
            "id": "eipalloc-057a7d975f34b94d1",
            "public_dns": "ec2-3-222-36-248.compute-1.amazonaws.com",
            "public_ip": "3.222.36.248",
            "public_ipv4_pool": "amazon",
            "vpc": true
          }
        }
      ]
    },
    {
      "module": "module.bastion",
      "mode": "managed",
      "type": "aws_instance",
      "name": "ec2",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-c998b6b2",
            "arn": "arn:aws:ec2:us-east-1:645409657343:instance/i-06a4205e8a2dbf76c",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sdb",
                "encrypted": true,
                "iops": 150,
                "kms_key_id": "arn:aws:kms:us-east-1:645409657343:key/70768baf-a11a-427f-a652-f062d1715e3f",
                "volume_id": "vol-08d148c4618da4a3f",
                "volume_size": 50,
                "volume_type": "gp2"
              }
            ],
            "ebs_optimized": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-06a4205e8a2dbf76c",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "my-east-1-test",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-03a6a445226e286e1",
            "private_dns": "ip-10-200-0-16.ec2.internal",
            "private_ip": "10.200.0.16",
            "public_ip": "34.228.215.62",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "volume_id": "vol-06b6ad9cd0f1a75f1",
                "volume_size": 10,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-06f83e82d65191653",
            "tags": {
              "Name": "demo-relay-bastion"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-0ac01a44fcfa5cc58",
              "sg-0c43bd1557110070a"
            ]
          },
          "dependencies": [
            "aws_key_pair.auth_key_pair",
            "aws_subnet.web-az1a-subnet",
            "aws_vpc.infra-vpc",
            "module.bastion.aws_security_group.ec2-sg",
            "module.whitelist-sg.aws_security_group.whitelist-sg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "default",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:645409657343:internet-gateway/igw-0f9a7c7f080872582",
            "id": "igw-0f9a7c7f080872582",
            "owner_id": "645409657343",
            "vpc_id": "vpc-0d0d31147fb504d9c"
          },
          "dependencies": [
            "aws_vpc.infra-vpc"
          ]
        }
      ]
    },
    {
      "module": "module.devops-alb",
      "mode": "managed",
      "type": "aws_lb",
      "name": "devops-alb",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-1:645409657343:loadbalancer/app/devops-alb/d9bd9777301229ca",
            "arn_suffix": "app/devops-alb/d9bd9777301229ca",
            "dns_name": "devops-alb-567991293.us-east-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "id": "arn:aws:elasticloadbalancing:us-east-1:645409657343:loadbalancer/app/devops-alb/d9bd9777301229ca",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "devops-alb",
            "security_groups": [
              "sg-08fb0c6b998554eaf"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-049d4ed11ea95abb8"
              },
              {
                "subnet_id": "subnet-06f83e82d65191653"
              }
            ],
            "subnets": [
              "subnet-049d4ed11ea95abb8",
              "subnet-06f83e82d65191653"
            ],
            "tags": {
              "Name": "devops-alb",
              "Project": "demo"
            },
            "vpc_id": "vpc-0d0d31147fb504d9c",
            "zone_id": "Z35SXDOTRQ7X7K"
          },
          "dependencies": [
            "aws_subnet.web-az1a-subnet",
            "aws_subnet.web-az1b-subnet",
            "aws_vpc.infra-vpc",
            "module.devops-alb.aws_security_group.web_alb_sg"
          ]
        }
      ]
    },
    {
      "module": "module.relay-tg",
      "mode": "managed",
      "type": "aws_lb_listener_rule",
      "name": "host_based_routing",
      "provider": "provider.aws",
      "instances": []
    },
    {
      "module": "module.devops-alb",
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "default-http-tg",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:645409657343:targetgroup/default-test-http-tg/2568d44c0433a520",
            "arn_suffix": "targetgroup/default-test-http-tg/2568d44c0433a520",
            "deregistration_delay": 300,
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 2,
                "interval": 30,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:645409657343:targetgroup/default-test-http-tg/2568d44c0433a520",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "name": "default-test-http-tg",
            "port": 8081,
            "protocol": "HTTP",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "tags": {
              "Name": "demo-relay-devops-alb-tg"
            },
            "target_type": "instance",
            "vpc_id": "vpc-0d0d31147fb504d9c"
          },
          "dependencies": [
            "aws_vpc.infra-vpc"
          ]
        }
      ]
    },
    {
      "module": "module.relay-tg",
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "lb_target_group",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:645409657343:targetgroup/demo-relay-nginx-tg/0513b7f2e17e7862",
            "arn_suffix": "targetgroup/demo-relay-nginx-tg/0513b7f2e17e7862",
            "deregistration_delay": 30,
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 2,
                "interval": 30,
                "matcher": "200,302",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 4
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:645409657343:targetgroup/demo-relay-nginx-tg/0513b7f2e17e7862",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "name": "demo-relay-nginx-tg",
            "port": 80,
            "protocol": "HTTP",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-0d0d31147fb504d9c"
          },
          "dependencies": [
            "aws_vpc.infra-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "nat_1",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-057a7d975f34b94d1",
            "id": "nat-045590c958dfc7a7d",
            "network_interface_id": "eni-01aac844ab1548c66",
            "private_ip": "10.200.0.15",
            "public_ip": "3.222.36.248",
            "subnet_id": "subnet-06f83e82d65191653"
          },
          "dependencies": [
            "aws_eip.nat_1",
            "aws_internet_gateway.default",
            "aws_subnet.web-az1a-subnet",
            "aws_vpc.infra-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route",
      "name": "internet_access",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-0f9a7c7f080872582",
            "id": "r-rtb-071eb063dc64443411080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-071eb063dc6444341",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_peering_connection_id": ""
          },
          "dependencies": [
            "aws_internet_gateway.default",
            "aws_vpc.infra-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "nat_gw_1",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtb-0af619b791d3c0267",
            "owner_id": "645409657343",
            "propagating_vgws": [],
            "route": [
              {
                "cidr_block": "0.0.0.0/0",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "nat_gateway_id": "nat-045590c958dfc7a7d",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": null,
            "vpc_id": "vpc-0d0d31147fb504d9c"
          },
          "dependencies": [
            "aws_eip.nat_1",
            "aws_internet_gateway.default",
            "aws_nat_gateway.nat_1",
            "aws_subnet.web-az1a-subnet",
            "aws_vpc.infra-vpc"
          ]
        }
      ]
    },
    {
      "module": "module.bastion",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "ec2-sg",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:645409657343:security-group/sg-0ac01a44fcfa5cc58",
            "description": "bastion security group",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0ac01a44fcfa5cc58",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": true,
                "to_port": 0
              }
            ],
            "name": "bastion-sg",
            "name_prefix": null,
            "owner_id": "645409657343",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "demo-relay-bastion-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0d0d31147fb504d9c"
          },
          "dependencies": [
            "aws_vpc.infra-vpc"
          ]
        }
      ]
    },
    {
      "module": "module.relay",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "ec2-sg",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:645409657343:security-group/sg-07eaebc27cda12201",
            "description": "nginx security group",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-07eaebc27cda12201",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": true,
                "to_port": 0
              }
            ],
            "name": "nginx-sg",
            "name_prefix": null,
            "owner_id": "645409657343",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "demo-relay-nginx-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0d0d31147fb504d9c"
          },
          "dependencies": [
            "aws_vpc.infra-vpc"
          ]
        }
      ]
    },
    {
      "module": "module.nginx",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "ec2-sg",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:645409657343:security-group/sg-067d015a3f6c34d2b",
            "description": "apache security group",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-067d015a3f6c34d2b",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": true,
                "to_port": 0
              }
            ],
            "name": "apache-sg",
            "name_prefix": null,
            "owner_id": "645409657343",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "demo-relay-apache-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-00641b2043a0ed6ac"
          },
          "dependencies": [
            "aws_vpc.infra2-vpc"
          ]
        }
      ]
    },
    {
      "module": "module.devops-alb",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "web_alb_sg",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:645409657343:security-group/sg-08fb0c6b998554eaf",
            "description": "Used in the terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-08fb0c6b998554eaf",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              }
            ],
            "name": "terraform_example",
            "name_prefix": null,
            "owner_id": "645409657343",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "demo-relay-web-alb-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0d0d31147fb504d9c"
          },
          "dependencies": [
            "aws_vpc.infra-vpc"
          ]
        }
      ]
    },
    {
      "module": "module.whitelist-sg",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "whitelist-sg",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:645409657343:security-group/sg-0c43bd1557110070a",
            "description": "whitelist security group",
            "egress": [],
            "id": "sg-0c43bd1557110070a",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": true,
                "to_port": 0
              }
            ],
            "name": "whitelist-sg",
            "name_prefix": null,
            "owner_id": "645409657343",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "demo-relay-whitelist-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0d0d31147fb504d9c"
          },
          "dependencies": [
            "aws_vpc.infra-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "app-az1a-subnet",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:645409657343:subnet/subnet-0497205ad05e95494",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.201.0.64/27",
            "id": "subnet-0497205ad05e95494",
            "map_public_ip_on_launch": false,
            "owner_id": "645409657343",
            "tags": {
              "Name": "demo-relay-app-az1a-subnet"
            },
            "vpc_id": "vpc-00641b2043a0ed6ac"
          },
          "dependencies": [
            "aws_vpc.infra2-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "app-az1b-subnet",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:645409657343:subnet/subnet-01da34efe904e4f62",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.201.0.96/27",
            "id": "subnet-01da34efe904e4f62",
            "map_public_ip_on_launch": false,
            "owner_id": "645409657343",
            "tags": {
              "Name": "demo-relay-app-az1b-subnet"
            },
            "vpc_id": "vpc-00641b2043a0ed6ac"
          },
          "dependencies": [
            "aws_vpc.infra2-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "web-az1a-subnet",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:645409657343:subnet/subnet-06f83e82d65191653",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.200.0.0/27",
            "id": "subnet-06f83e82d65191653",
            "map_public_ip_on_launch": true,
            "owner_id": "645409657343",
            "tags": {
              "Name": "demo-relay-web-az1a-subnet"
            },
            "vpc_id": "vpc-0d0d31147fb504d9c"
          },
          "dependencies": [
            "aws_vpc.infra-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "web-az1b-subnet",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:645409657343:subnet/subnet-049d4ed11ea95abb8",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.200.0.32/27",
            "id": "subnet-049d4ed11ea95abb8",
            "map_public_ip_on_launch": true,
            "owner_id": "645409657343",
            "tags": {
              "Name": "demo-relay-web-az1b-subnet"
            },
            "vpc_id": "vpc-0d0d31147fb504d9c"
          },
          "dependencies": [
            "aws_vpc.infra-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "infra-vpc",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:645409657343:vpc/vpc-0d0d31147fb504d9c",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.200.0.0/16",
            "default_network_acl_id": "acl-06164fe117df835c1",
            "default_route_table_id": "rtb-071eb063dc6444341",
            "default_security_group_id": "sg-06cb513a521e29d56",
            "dhcp_options_id": "dopt-12d60376",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "id": "vpc-0d0d31147fb504d9c",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-071eb063dc6444341",
            "owner_id": "645409657343",
            "tags": {
              "Name": "relay-vpc"
            }
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "infra2-vpc",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:645409657343:vpc/vpc-00641b2043a0ed6ac",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.201.0.0/16",
            "default_network_acl_id": "acl-09a04711f9bf26dc1",
            "default_route_table_id": "rtb-00c796337840dddb6",
            "default_security_group_id": "sg-0e7257d0b5879cac0",
            "dhcp_options_id": "dopt-12d60376",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "id": "vpc-00641b2043a0ed6ac",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-00c796337840dddb6",
            "owner_id": "645409657343",
            "tags": {
              "Name": "app-vpc"
            }
          }
        }
      ]
    }
  ]
}